--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ gwt-unitCache/
 www-test/
 .gwt-tmp/
 
-## Android Studio and Intellij and Android in general
+## Android Studio, Intellij and Android in general
 android/libs/armeabi/
 android/libs/armeabi-v7a/
 android/libs/arm64-v8a/
